crates/submilli-engine/tests/snapshots/diagnostic_snapshots__b1_dynamic_object_index.snap
---
source: crates/submilli-engine/tests/diagnostic_snapshots.rs
assertion_line: 74
expression: "render_inside_main(\"  let o = { a: 1 };\\n  let k = \\\"a\\\";\\n  let r = o[k];\")"
---
error: objects can only be indexed by a string literal or a finite union of their keys
 --> test.subm:4:13
  |
3 |   let k = "a";
4 |   let r = o[k];
  |             ^
5 | }
  |
help: add a `Record<string, V>` annotation for arbitrary string keys
---
