crates/submilli-engine/tests/snapshots/diagnostic_snapshots__b1_field_not_found_on_object.snap
---
source: crates/submilli-engine/tests/diagnostic_snapshots.rs
expression: "render_inside_main(\"  let p: { x: number; y: number } = { x: 1, y: 2 };\\n  let z = p.z;\")"
---
error: field `z` does not exist on `{ x: number; y: number }`
 --> test.subm:3:13
  |
2 |   let p: { x: number; y: number } = { x: 1, y: 2 };
3 |   let z = p.z;
  |             ^
4 | }
  |
help: {
  x: number;
  y: number;
}
---
