crates/submilli-engine/tests/snapshots/diagnostic_snapshots__b2_generic_function_arg_unify_mismatch_lifts_signature_and_diff.snap
---
source: crates/submilli-engine/tests/diagnostic_snapshots.rs
expression: render_all(source)
---
error: object literal has unknown field `z` for the target type
 --> test.subm:4:31
  |
3 |   const first: { x: number; y: number } = { x: 1, y: 2 };
4 |   let p = pick(first, { x: 1, z: 3 });
  |                               ^
5 | }
  |
help: valid fields: `x`, `y`
  |
help: remove `z` or rename it to `x`
---
error: object literal is missing required field `y`
 --> test.subm:4:23
  |
3 |   const first: { x: number; y: number } = { x: 1, y: 2 };
4 |   let p = pick(first, { x: 1, z: 3 });
  |                       ^^^^^^^^^^^^^^
5 | }
---
error: expected `{ x: number; y: number }`, got `{ x: number; z: number }`
 --> test.subm:4:23
  |
3 |   const first: { x: number; y: number } = { x: 1, y: 2 };
4 |   let p = pick(first, { x: 1, z: 3 });
  |                       ^^^^^^^^^^^^^^
5 | }
  |
help: missing field(s): `y`
extra field(s): `z`
---
