crates/submilli-engine/tests/snapshots/diagnostic_snapshots__b2_number_coercion_type_mismatch_lifts_signature.snap
---
source: crates/submilli-engine/tests/diagnostic_snapshots.rs
expression: "render_inside_main(\"  let x = Number(42);\")"
---
error: expected `string | bigint | undefined`, got `number`
 --> test.subm:2:18
  |
1 | function main(): void {
2 |   let x = Number(42);
  |                  ^^
3 | }
---
