crates/submilli-engine/tests/snapshots/diagnostic_snapshots__b3_unresolved_identifier_no_suggestion_when_no_close_match.snap
---
source: crates/submilli-engine/tests/diagnostic_snapshots.rs
expression: "render_inside_main(\"  let pi: number = 3;\\n  let q = absolutely_unrelated_name;\")"
---
error: unresolved identifier `absolutely_unrelated_name`
 --> test.subm:3:11
  |
2 |   let pi: number = 3;
3 |   let q = absolutely_unrelated_name;
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^
4 | }
---
